# ia-cloud-1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fast_api.py  model_app.py  pyproject.toml  train_model.py
.github/workflows/: deploy.yml
kafka/: constants.py  consumer.py  consumer_predict.py  consumer_view_predictions.py  create_partitions.py  process_and_resend.py  producer.py  producer_multi.py
kafka_exos/: consumer.py  consumer_predict.py  consumer_view_predictions.py  create_partitions.py  data.py  model_loader.py  process_and_resend.py  producer.py  producer_multi.py
